2008-03-05  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/admin.c
	  src/racoon/admin.h
	  src/racoon/evt.c
	  src/racoon/evt.h
	  src/racoon/handler.c
	  src/racoon/handler.h
	  src/racoon/isakmp.c
	  src/racoon/isakmp_agg.c
	  src/racoon/isakmp_base.c
	  src/racoon/isakmp_cfg.c
	  src/racoon/isakmp_ident.c
	  src/racoon/isakmp_inf.c
	  src/racoon/isakmp_var.h
	  src/racoon/isakmp_xauth.c
	  src/racoon/racoonctl.8
	  src/racoon/racoonctl.c
	  src/racoon/session.c: refactor admin socket event protocol to be
          less error prone.

2008-03-05  Matthew Grooms
	* src/racoon/cfparse.y: properly initialize the unity network struct

2008-03-05  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/pfkey.c
	  src/racoon/pfkey.h
	  src/racoon/session.c: reload SPD on SIGHUP or adminport reload
	* src/racoon/pfkey.c: better handling for pfkey socket read errors

2008-02-25  Emmanuel Dreyfus <manu@netbsd.org>
	From Brian Haley <brian.haley@hp.com>
	* src/racoon/ipsec_doi.c: Do check SPI size (it was not due to a typo)

2008-02-22  Emmanuel Dreyfus <manu@netbsd.org>
	From Brian Haley <brian.haley@hp.com>
	* src/racoon/isakmp.c: Fix address length

2008-02-10  S.P.Zeidler <spz@netbsd.org>
	* src/racoon/ipsec_doi.c: fix NetBSD PR bin/37644 

2008-01-11  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/handler.[ch]: added an 'established' arg to getph1byaddr()
	From Krzysztof Oledzki <olel@ans.pl>:
	* src/racoon/isakmp.c: Only search for established ph1 handles in
	  DPD (also reported new getph1byaddr() arg)
	* src/racoon/isakmp_inf.c: added some details to some logs  (also
	  reported new getph1byaddr() arg) 
	* src/racoon/crypto_openssl.c: fixed compilation with idea and
	  recent gcc
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/isakmp_inf.c: reset iph1->dpd_r_u in the scheduler's
	  callback, to avoid some access to freed memory

2007-12-30  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/racoonctl.8